syntax = "proto3";

package user;

import "github.com/metaverse/truss/deftree/googlethirdparty/annotations.proto";

service User {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/user/{ID}"
    };
  }
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      custom {
        kind: "HEAD"
        path: "/user/register"
      }
      additional_bindings {
        post: "/user/register"
        // All other fields (In) are located in the body of the http/json request
        body: "*"
      }
    };
  }
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      custom {
        kind: "HEAD"
        path: "/user/{ID}"
      }
      additional_bindings {
        put: "/user/{ID}"
        // All other fields (In) are located in the body of the http/json request
        body: "*"
      }
    };
  }
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      custom {
        kind: "HEAD"
        path: "/user/{ID}"
      }
      additional_bindings {
        delete: "/user/{ID}"
        // All other fields (In) are located in the body of the http/json request
        body: "*"
      }
    };
  }
}

message UserObj {
  uint64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string address1 = 5;
  string address2 = 6;
  string city = 7;
  string state = 8;
  string country = 9;
  string phone = 10;
}

message GetUserRequest {
  uint64 ID = 1;
}

message GetUserResponse {
  int32 code = 1;
  string message = 2;
  UserObj user = 3;
}

message CreateUserRequest {
  string password = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string address1 = 5;
  string address2 = 6;
  string city = 7;
  string state = 8;
  string country = 9;
  string phone = 10;
  string status = 11;
}

message CreateUserResponse {
  int32 code = 1;
  string message = 2;
}


message UpdateUserRequest {
  uint64 ID = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string address1 = 5;
  string address2 = 6;
  string city = 7;
  string state = 8;
  string country = 9;
  string phone = 10;
  string status = 11;
}

message UpdateUserResponse {
  int32 code = 1;
  string message = 2;
}

message DeleteUserRequest {
  uint64 ID = 1;
}
message DeleteUserResponse {
  int32 code = 1;
  string message = 2;
}